--- a/chapter_randomvars.tex
+++ b/chapter_randomvars.tex
@@ -94,7 +94,7 @@ map them to the real numbers!
 
 From this point forward, we will only refer to events by the values that random
 variables take on for those events' constitutent outcomes. For example, if
-$X$ represents the number of heads flipped on one coin toss, then $X = 0$
+$X$ represents the number of heads flipped on one coin toss, then $X \rveq 0$
 refers to the \emph{event} where the coin landed tails, and $X = 1$ refers to
 the \emph{event} where the coin landed heads. Because the probability function
 maps events to numbers, we can now write:
