--- a/main.tex
+++ b/main.tex
@@ -17,9 +17,10 @@
 \newcommand{\var}[1]{\mathbb{V}\left[{#1}\right]}
 \newcommand{\cov}[1]{\mathrm{Cov}\!\left[{#1}\right]}
 \newcommand{\defeq}{\stackrel{\text{def}}{=}}
+\newcommand{\rveq}{\stackrel{\text{rv}}{=}}
 \newcommand{\dd}{\, \mathrm{d}}
 
-\title{Statistical testing for scientists: principles of exact, approximate, and empirical tests}
+\title{A short introduction to advanced statistics for scientists}
 \author{Scott W. Olesen}
 
 \begin{document}
